Update About data, fix Hero layout, add Ramadan Counter, and integrate Monime checkout

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
     "rewrites": [
         {
+            "source": "/api/monime/(.*)",
+            "destination": "https://api.monime.io/v1/$1"
+        },
+        {
             "source": "/(.*)",
             "destination": "/index.html"
         }
